# hub

./: Cargo.toml  tsconfig.json
public/: fs.html  schulte.html  typo.html
src/: debounce.ts  fs.ts  grid.ts  main.rs  schulte.ts  stats.ts  typo.ts
src/fs/: delete.rs  get.rs  mod.rs  post.rs  put.rs
styles/: fs.css  schulte.css
