[package]
name = "hub"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version="0.8.9", features=["json"] }
futures-util = "0.3.32"
mime_guess = "2.0.5"
serde = { version = "1.0.228", features = ["serde_derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.2", features = ["fs", "io-util", "macros", "rt-multi-thread"] }
tokio-util = { version = "0.7.18", features = ["io"] }
tracing = "0.1.44"
